@@ -2,4 +2,4 @@ FROM openjdk:21-ea-jdk
 ARG JAR_FILE=build/libs/*.jar
 COPY ${JAR_FILE} app.jar
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","-Dspring.profiles.active=prod","/app.jar"]
+ENTRYPOINT ["java","-jar","--enable-preview","-Dspring.profiles.active=prod","/app.jar"]
